[package]
name = "carpai-internal"
version = "0.12.0"
edition = "2024"
description = "Internal API traits for CarpAI - decouples agents from concrete implementations"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Streaming (for EventBus and VFS watch)
tokio-stream = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Shared types (from existing crates)
jcode-core-types = { path = "../jcode-core-types" }
jcode-runtime-types = { path = "../jcode-runtime-types" }

[dev-dependencies]
tokio-test = "0.4"
