[package]
name = "carpai-server"
version = "0.1.0"
edition = "2024"
description = "CarpAI Enterprise Server - Multi-tenant AI coding assistant server"
license = "MIT"

[dependencies]
# Internal crates
carpai-core = { path = "../carpai-core" }
carpai-internal = { path = "../carpai-internal" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"

# REST API
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
prometheus-client = "0.22"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1"
regex = "1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "2"

[build-dependencies]
tonic-build = "0.12"
