[package]
name = "carpvoid-client"
version = "0.1.0"
edition = "2021"
description = "Carpvoid edge inference client - run CarpAI inference on internet cafe / laptop machines"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sys-info = "0.9"

[[bin]]
name = "carpvoid-client"
path = "src/main.rs"
