[package]
name = "jcode-build-engine"
version = "0.1.0"
edition = "2024"
description = "CarpTMS 编译引擎 - Ruflo-Parallax 三层调度架构"

[dependencies]
# Workspace 共享依赖（确认在 workspace.dependencies 中的）
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = { workspace = true }
async-stream = { workspace = true }

# 非 workspace 依赖（直接指定版本）
parking_lot = "0.12"
thiserror = "1"
bytes = "1"
md5 = "0.7"
futures-util = "0.3"

# 可选依赖
async-nats = "0.35"
metrics = "0.24"
prometheus = "0.13"
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"], optional = true }
hyper = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"], optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
full = ["axum", "tower", "tower-http", "hyper", "sqlx", "redis"]
api = ["axum", "tower", "tower-http", "hyper"]
persistence = ["sqlx"]
distributed = ["redis"]
