[package]
name = "jcode-ci-generator"
version = "0.1.0"
edition = "2021"
description = "CI config generator — auto-detect tech stack, generate .gitlab-ci.yml, Jenkinsfile, GitHub Actions"

[dependencies]
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
