[package]
name = "jcode-completion"
version = "0.1.0"
edition = "2021"
description = "Auto-completion engine — LLM creativity × Rust precision × Memory personalization"

[dependencies]
tokio = { workspace = true, features = ["fs", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
parking_lot = "0.12"
async-trait = "0.1"
lsp-types = "0.95"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
