[package]
name = "jcode-cross-file-repair"
version = "0.1.0"
edition = "2021"
description = "Cross-file repair engine — unified AST, dependency analysis, type-checking self-correction loop"

[dependencies]
tokio = { workspace = true, features = ["sync", "process", "fs", "rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
parking_lot = "0.12"
uuid = { workspace = true }
regex = "1"
similar = "2"
futures = "0.3"
async-trait = "0.1"
jcode-plan = { path = "../jcode-plan" }
