[package]
name = "jcode-defaults"
version = "0.1.0"
edition = "2024"
description = "Zero-configuration startup system for jcode (Cursor-like out-of-box experience)"

[dependencies]
# Configuration management
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File system
dirs = "5"
glob = "0.3"
walkdir = "2"

# Platform detection
sys-info = "0.9"
whoami = "1.5"

# UUID generation
uuid = { workspace = true, features = ["v4"] }

# Internal dependencies
jcode-core = { path = "../jcode-core" }
