[package]
name = "jcode-distributed-inference"
version = "0.1.0"
edition = "2024"
description = "CarpAI Distributed Inference Engine - Parallax Pipeline Parallelism Worker"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math & Tensor operations
ndarray = "0.16"
half = "2.4"

# System info
sys-info = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
